--- a/doc/sections/titlepage.tex
+++ b/doc/sections/titlepage.tex
@@ -17,9 +17,10 @@
 		\vspace{1.5cm}
 		\includegraphics[width=12cm]{figures/lmu_logo.png} \\ % insert the university logo
 		\vspace{1cm}
-		\Large
-		This is the still unknown title \\
-		of my master thesis \\
+		\Huge 
+		The effects of word segmentation quality \\
+		on word alignments \\
+		\vspace{1cm}
 		{\Large\scshape Ane Berasategi \par}
 		\normalsize
 		{Matriculation number: 12006250 \par}
@@ -27,7 +28,7 @@
 		\vspace{1.5cm}
 		{\scshape Supervisor: Masoud Jalil Sabet \par}
 		{\scshape Supervisor: Prof Dr.Hinrich Schütze \par}
-		{Submitted on: never \par} %\today
+		{Submitted on: 2020 August \par} %\today
 		\vspace{1cm}
 		\tiny Version 1, 25 June 2020
 	\end{center}
